--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <header class="gallery__header">
       <h2 class="gallery__title">Gallery</h2>
-      <h3 class="gallery__tagline">Moments from our Yacht &amp; Cruise Experiences</h3>
+      <h3 class="gallery__tagline">Moments from our Yacht Experiences</h3>
       <p class="gallery__description">Tap any photo or video to view in full.</p>
     </header>
 
